--- a/src/routes/PrimaryLayout/PrimaryLayout.scss
+++ b/src/routes/PrimaryLayout/PrimaryLayout.scss
@@ -83,7 +83,7 @@ $drawer-z-index: 51;
   // From Bootstrap make-col-ready():
   position: relative;
   min-height: 1px; // Prevent collapsing
-  height: 100vh;
+  height: calc(100vh - 56px);
   flex: 0 0 $center-column-width;
   max-width: $center-column-width;
   overflow-y: auto;
