--- a/src/routes/Search/Search.scss
+++ b/src/routes/Search/Search.scss
@@ -11,6 +11,19 @@
   padding: 16px 0 32px 0;
 }
 
+.search-results::-webkit-scrollbar {
+  background-color:transparent;
+  width: 5px;
+  border-radius: 5px;
+}
+
+.search-results::-webkit-scrollbar-thumb {
+  background-color: rgba(200,200,200,.5   );
+  outline: none;
+  border-radius: 3px;
+}
+
+
 // Highlight
 .highlight {
   background-color: $color-caribbean-green-20;
